# yara-ocaml

./: .gitignore  README.md  dune-project  yara.opam
codegen/: dune  main.ml
discover/: discover.ml
example/: dune  main.ml
yara/: dune  yara.ml  yara.mli  yara_stubs.cpp
